# EcoIndex_python

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  up.sh
.github/: labeler.yml
.github/workflows/: build_publish_api.yml  build_publish_cli.yml  build_publish_compute.yml  build_publish_scraper.yml  pr_validation.yml  quality_check.yml  stale.yml
bases/ecoindex/backend/: main.py
bases/ecoindex/backend/middlewares/: exception_handler.py
bases/ecoindex/backend/routers/: ecoindex.py  tasks.py
bases/ecoindex/backend/services/: ecoindex.py
bases/ecoindex/backend/utils/: __init__.py
bases/ecoindex/cli/: arguments_handler.py
bases/ecoindex/worker/: health.py  tasks.py
components/ecoindex/config/: sentry.py  settings.py
components/ecoindex/database/: engine.py
components/ecoindex/database/repositories/: ecoindex.py  host.py
components/ecoindex/models/: response_examples.py  tasks.py
components/ecoindex/monitoring/: __init__.py
components/ecoindex/scraper/: helper.py  scrap.py
components/ecoindex/screenshot_storage/: __init__.py  storage.py
components/ecoindex/utils/: screenshot_storage.py  screenshots.py
components/ecoindex/worker_component/: __init__.py
projects/ecoindex_api/: .dockerignore  .env.template  README.md  Taskfile.yml  docker-compose.yml.template  garage.toml  openapi.json  pyproject.toml
projects/ecoindex_api/alembic/versions/: 5afa2faea43f_.py  e83263a5def4_add_index_id_and_host.py  fd9a1f5662c8_first_migration.py
projects/ecoindex_api/docker/backend/: dockerfile
projects/ecoindex_api/docker/worker/: dockerfile  entrypoint.sh
projects/ecoindex_api/scripts/: clean_stale_rq_workers.py  docker_compose_up.sh  docker_container_on_port.sh  init_rustfs_bucket.py  init_rustfs_bucket.sh  start_dev_infra.sh  start_rq_workers.sh  wait_db.sh  wait_redis.py  wait_valkey.py
projects/ecoindex_cli/: README.md  Taskfile.yml  dockerfile  pyproject.toml
projects/ecoindex_compute/: Taskfile.yml  pyproject.toml
projects/ecoindex_scraper/: README.md  Taskfile.yml  dockerfile  pyproject.toml
tasks/: DockerTaskfile.yml  PypiTaskFile.yml  QualityTaskFile.yml  UvTaskfile.yml
test/bases/ecoindex/backend/: test_tasks.py
test/bases/ecoindex/cli/: test_app.py
test/components/ecoindex/config/: test_sentry.py  test_settings.py
test/components/ecoindex/database/: test_repository_queries.py
test/components/ecoindex/scraper/: test_scraper.py
test/components/ecoindex/utils/: test_screenshot_storage.py
