[project]
name = "ecoindex-monorepo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Vincent Vatelot", email = "vincent.vatelot@ik.me" }]
dependencies = [
    "aiofile>=3.8.8",
    "cryptography>=44.0.2",
    "haralyzer>=2.4.0",
    "loguru>=0.7.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-slugify>=8.0.4",
    "redis[hiredis]>=5.0.1",
    "requests>=2.32.4",
    "setuptools>=78.1.1",
    "tomli>=2.0.1",
]

[project.scripts]
update-values = "ecoindex.scripts:update_values"

[dependency-groups]
scraper = [
    "camoufox>=0.4.11",
]
scraper-webp = [
    "pillow>=12.2.0",
]
cli = [
    "click>=8.0.0",
    "click-spinner>=0.1.10",
    "jinja2>=3.1.3",
    "matplotlib>=3.8.0",
    "pandas>=2.1.2",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "scrapy>=2.11.1",
    "typer>=0.9.0",
]
api = [
    "aiosqlite>=0.19.0",
    "alembic>=1.12.1",
    "rq>=2.1.0",
    "sentry-sdk>=2.8.0",
    "sqlmodel>=0.0.14",
    "ua-generator>=2.0.3",
]
api-backend = [
    "fastapi>=0.109.1",
    "uvicorn>=0.23.2",
]
dev = [
    "black>=24.3.0",
    "mypy>=1.7.0",
    "polylith-cli",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-picked>=0.5.0",
    "ruff>=0.1.1",
    "types-click-spinner>=0.1.13.6",
    "types-pyyaml>=6.0.12.12",
    "types-requests>=2.31.0.10",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.uv.workspace]
members = ["projects/*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
mypy_path = ["bases", "components"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = [
    "test",
    "dist",
    "__pycache__",
    "projects/ecoindex_api/alembic/versions",
]

[tool.coverage.run]
omit = ["test/*"]

[tool.coverage.report]
skip_empty = true

[tool.pyright]
extraPaths = ["bases", "components"]

[tool.polylith.bricks]
"bases/ecoindex/backend" = "ecoindex/backend"
"bases/ecoindex/worker" = "ecoindex/worker"
"bases/ecoindex/cli" = "ecoindex/cli"
"components/ecoindex/scraper" = "ecoindex/scraper"
"components/ecoindex/models" = "ecoindex/models"
"components/ecoindex/scripts" = "ecoindex/scripts"
"components/ecoindex/exceptions" = "ecoindex/exceptions"
"components/ecoindex/compute" = "ecoindex/compute"
"components/ecoindex/config" = "ecoindex/config"
"components/ecoindex/data" = "ecoindex/data"
"components/ecoindex/utils" = "ecoindex/utils"
"components/ecoindex/database" = "ecoindex/database"
"components/ecoindex/worker_component" = "ecoindex/worker_component"
