[project]
name = "ecoindex_api"
version = "3.15.0"
description = "REST API to expose Ecoindex"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Creative Commons BY-NC-ND" }
authors = [{ name = "Vincent Vatelot", email = "vincent.vatelot@ik.me" }]
dependencies = [
    "aiofile>=3.8.8",
    "alembic>=1.12.1",
    "boto3>=1.39.0",
    "rq>=2.1.0",
    "cryptography>=48.0.1",
    "fastapi>=0.109.1",
    "playwright>=1.39.0",
    "playwright-stealth>=1.0.6",
    "pydantic[email]>=2.1.1,<=2.4.2",
    "pydantic-settings>=2.0.3",
    "pyyaml>=6.0.1",
    "redis>=5.0.1",
    "requests>=2.32.4",
    "sentry-sdk>=2.8.0",
    "setuptools>=78.1.1",
    "sqlmodel>=0.0.14",
    "ua-generator>=2.0.5",
]

[project.optional-dependencies]
webp = ["pillow>=12.2.0"]

[project.scripts]
update-openapi = "ecoindex.backend.scripts.openapi:main"

[project.urls]
Homepage = "http://www.ecoindex.fr"
Repository = "https://github.com/cnumr/EcoIndex_python"

[dependency-groups]
backend = [
    "uvicorn>=0.23.2",
]
worker = [
    "pillow>=12.2.0",
    "playwright>=1.39.0",
    "playwright-stealth>=1.0.6",
]
dev = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "rq-dashboard",
    "typing-extensions>=4.8.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["ecoindex"]

[tool.polylith.bricks]
"../../bases/ecoindex/backend" = "ecoindex/backend"
"../../bases/ecoindex/worker" = "ecoindex/worker"
"../../components/ecoindex/compute" = "ecoindex/compute"
"../../components/ecoindex/config" = "ecoindex/config"
"../../components/ecoindex/data" = "ecoindex/data"
"../../components/ecoindex/database" = "ecoindex/database"
"../../components/ecoindex/exceptions" = "ecoindex/exceptions"
"../../components/ecoindex/models" = "ecoindex/models"
"../../components/ecoindex/monitoring" = "ecoindex/monitoring"
"../../components/ecoindex/scraper" = "ecoindex/scraper"
"../../components/ecoindex/screenshot_storage" = "ecoindex/screenshot_storage"
"../../components/ecoindex/utils" = "ecoindex/utils"
"../../components/ecoindex/worker_component" = "ecoindex/worker_component"
