[project]
name = "ecoindex_cli"
version = "2.30.1"
description = "`ecoindex-cli` is a CLI tool that let you make ecoindex tests on given pages"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Creative Commons BY-NC-ND" }
authors = [{ name = "Vincent Vatelot", email = "vincent.vatelot@ik.me" }]
dependencies = [
    "aiofile>=3.8.8",
    "click>=8.0.0",
    "click-spinner>=0.1.10",
    "jinja2>=3.1.2",
    "loguru>=0.7.2",
    "matplotlib>=3.8.0",
    "pandas>=2.1.2",
    "camoufox>=0.4.11",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "scrapy>=2.11.0",
    "typer>=0.9.0",
    "ua-generator>=2.0.5",
]

[project.scripts]
ecoindex-cli = "ecoindex.cli.app:app"

[project.urls]
Homepage = "http://www.ecoindex.fr"
Repository = "https://github.com/cnumr/EcoIndex_python"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["ecoindex"]

[tool.polylith.bricks]
"../../bases/ecoindex/cli" = "ecoindex/cli"
"../../components/ecoindex/compute" = "ecoindex/compute"
"../../components/ecoindex/config" = "ecoindex/config"
"../../components/ecoindex/data" = "ecoindex/data"
"../../components/ecoindex/exceptions" = "ecoindex/exceptions"
"../../components/ecoindex/models" = "ecoindex/models"
"../../components/ecoindex/scraper" = "ecoindex/scraper"
"../../components/ecoindex/utils" = "ecoindex/utils"
