[project]
name = "ecoindex_scraper"
version = "3.17.0"
description = "Ecoindex_scraper module provides a way to scrape data from given website while simulating a real web browser"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Creative Commons BY-NC-ND" }
authors = [{ name = "Vincent Vatelot", email = "vincent.vatelot@ik.me" }]
dependencies = [
    "camoufox>=0.4.11",
    "pydantic>=2.4.2",
    "pyyaml>=6.0.1",
    "setuptools>=69.5.1,<79.0.0",
    "typing-extensions>=4.8.0",
    "ua-generator>=2.0.5",
]

[project.optional-dependencies]
webp = ["pillow>=12.2.0"]

[project.urls]
Homepage = "http://www.ecoindex.fr"
Repository = "https://github.com/cnumr/EcoIndex_python"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["ecoindex"]

[tool.polylith.bricks]
"../../components/ecoindex/compute" = "ecoindex/compute"
"../../components/ecoindex/data" = "ecoindex/data"
"../../components/ecoindex/exceptions" = "ecoindex/exceptions"
"../../components/ecoindex/models" = "ecoindex/models"
"../../components/ecoindex/scraper" = "ecoindex/scraper"
"../../components/ecoindex/utils" = "ecoindex/utils"
